# foe

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
browser-core/: Cargo.toml
browser-core/src/: downloader.rs  lib.rs  shields.rs  storage.rs
browser-core/src/compat/: mod.rs
browser-core/src/compat/polyfills/: abort_controller.js  crypto_random_uuid.js  custom_elements.js  dialog_element.js  eruda_devtools.js  intersection_observer.js  mod.rs  pointer_events.js  queue_microtask.js  request_idle_callback.js  resize_observer.js  structured_clone.js  svg_a_element.js  url_can_parse.js  web_animations.js
browser-core/src/compat/site_rules/: mod.rs
browser-core/src/compat/stylesheets/: baseline.css  mod.rs
browser-ui/: Cargo.toml  build.rs  download-solar-icons.sh  icons.list  package-lock.json  package.json  wry_test.rs
browser-ui/scripts/: generate-icons.mjs
browser-ui/src/: main.rs  rendering_setup.rs
browser-ui/src/handlers/: command_bar.rs  downloader.rs  mod.rs  navigation.rs  tabs.rs
browser-ui/src/servo_engine/: delegate.rs  gpu_context.rs  input.rs  mod.rs  rendering.rs  waker.rs
browser-ui/src/wry_engine/: mod.rs
browser-ui/ui/: appwindow.slint  command_bar.slint  common.slint  navbar.slint  sidebar.slint  tab_bar.slint  theme.slint  webview.slint
browser-ui/ui/icons/: icons.generated.slint
plan/: checklist.md  modern_browser_plan.md  plab.md  test_plan.md
scratch/: make_logo_transparent.py
scratch/searxng-local/: docker-compose.yml
scratch/searxng-local/custom-ui/: index.html
scratch/searxng-local/searxng/: settings.yml
