[package]
name = "browser-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
# We will add adblock crate later or use a custom lightweight engine if compiler fails.
