[package]
name = "browser-ui"
version = "0.1.0"
edition = "2021"
default-run = "browser-ui"

[dependencies]
slint = "1.6"
i-slint-backend-winit = "1.6"
browser-core = { path = "../browser-core" }
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
url = "2.5"
log = "0.4"
env_logger = "0.11"

# Servo Engine
servo = "=0.1.0"
servo-embedder-traits = "=0.1.0"
surfman = { version = "0.11.0", features = ["chains"] }
cgl = "0.3"
gl = "0.14.0"
gleam = "0.15"
glow = "0.16.0"
euclid = "0.22"
keyboard-types = "0.8"
image = "0.25"
dpi = "0.1"

[build-dependencies]
slint-build = "1.6"
